# truestack

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TRUSTED_DEPS.md
.github/workflows/: ci.yml
benches/: fingerprint_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_rule_engine.rs
src/: behavior.rs  favicon.rs  fingerprints.rs  implied.rs  lib.rs  main.rs  postprocess.rs  rules.toml  security_headers.rs  types.rs  version_intel.rs  waf.rs
src/router/: truestack_perfect_hash_trie.rs
src/version_intel/: tests.rs
tests/: adversarial.rs  gap.rs  integration.rs  property.rs  unit.rs
