[package]
name = "truestack"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["Santh Project <contact@santh.dev>"]
license = "MIT"
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/truestack"
documentation = "https://docs.rs/truestack"
description = "Security-aware technology fingerprinting  -  detects what is really running, not what the version string claims"
keywords = [ "security", "fingerprint", "wappalyzer", "techstack" ]
categories = ["web-programming", "network-programming"]

[package.metadata.santh]
status = "alpha"

[[bin]]
name = "truestack"
path = "src/main.rs"

[dependencies]
clap        = { workspace = true, features = ["derive"] }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
toml        = { workspace = true }
serde_yaml  = { workspace = true }
once_cell   = { workspace = true }
reqwest     = { workspace = true, features = ["rustls-tls", "json", "stream", "cookies"], optional = true }
guise = { default-features = false, features = ["http-headers", "reqwest-client"], optional = true }
base64      = { workspace = true, optional = true }
scraper     = { version = "=0.21.0" }
secfinding  = { version = "0.4.0" }
tokio       = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow      = { workspace = true }
futures-util = { workspace = true }
wafrift-detect = "=0.2.15"
bytes       = { workspace = true }
aho-corasick = { workspace = true }

[features]
default  = ["fetch"]
## Enable async HTTP fetching (requires a runtime).
fetch    = ["dep:reqwest", "dep:base64", "dep:guise"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "fingerprint_bench"
harness = false
