[package]
name = "truestack"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
authors = ["Santh Project <contact@santh.dev>"]
license = "MIT"
homepage = "https://santh.dev"
repository = "https://github.com/santhsecurity/truestack"
documentation = "https://docs.rs/truestack"
description = "Security-aware technology fingerprinting  -  detects what is really running, not what the version string claims"
keywords = [ "security", "fingerprint", "wappalyzer", "techstack" ]
categories = ["web-programming", "network-programming"]

[package.metadata.santh]
status = "alpha"

[[bin]]
name = "truestack"
path = "src/main.rs"
required-features = ["fetch"]

[dependencies]
clap        = { version = "4.6.0", features = ["derive"] }
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = { version = "1.0.149" }
toml        = { version = "0.8.23" }
serde_yaml  = { version = "0.9.34" }
once_cell   = { version = "1.21.4" }
reqwest     = { version = "0.12.28", features = ["rustls-tls", "json", "stream", "cookies"], optional = true }
guise = { version = "0.1.2", features = ["http-headers", "reqwest-client"], default-features = false, optional = true }
base64      = { version = "0.22.1", optional = true }
scraper     = { version = "=0.21.0" }
secfinding  = { version = "0.4.0" }
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow      = { version = "1" }
futures-util = { version = "=0.3.32" }
wafrift-detect = "=0.2.15"
bytes       = { version = "1.11.1" }
aho-corasick = { version = "1.1.4" }

[features]
default  = ["fetch"]
## Enable async HTTP fetching (requires a runtime).
fetch    = ["dep:reqwest", "dep:base64", "dep:guise"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = { version = "=0.6.5" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
proptest = { version = "1.9.0" }
serde_json = { version = "1.0.149" }

[[bench]]
name = "fingerprint_bench"
harness = false
